# tm

./: Cargo.toml  README.md  \
src/: binary_representation.rs  class_data.rs  class_loader.rs  class_manager.rs  corridor.rs  criteria.rs  draw.rs  exam_data.rs  hamming.rs  main.rs  optimization_results.rs  painter.rs  sk.rs  sk_manager.rs
