[package]
name = "tm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_extras = { version = "^0.23.0", features = ["image"] }
eframe = "^0.23.0"
image = { version = "^0.24.7", default-features = false, features = ["bmp"] }
egui_plot = "^0.23.0"
