[package]
name = "tm"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_extras = { version = "0.24.2", features = ["image"] }
eframe = "0.24.1"
image = { version = "0.24.7", default-features = false, features = ["bmp"] }
egui_plot = "0.24.1"
